# num-methods

./: .gitignore
1-task/: CMakeLists.txt  EXAMPLES.md  Makefile  main.cpp  progr.cpp  progr.h  test.cpp
1-task/a/: main1.cpp  progr.cpp  progr.h
1-task/src/: main.cpp
1-task/src/progr/: progr.cpp
numetic-methods/: build.gradle.kts  settings.gradle.kts
numetic-methods/gradle/wrapper/: gradle-wrapper.properties
numetic-methods/src/main/java/org/karabalin/: Gauss.java  Generator.java  Main.java
numetic-methods/src/main/java/org/karabalin/first/: FirstTask.java  Gauss.java
numetic-methods/src/main/java/org/karabalin/second/: MinimumResiduals.java  SecondTask.java
numetic-methods/src/test/java/org/karabalin/: GeneratorTest.java
numetic-methods/src/test/java/org/karabalin/first/: GaussTest.java
numetic-methods/src/test/java/org/karabalin/second/: MinimumResidualsTest.java
